fixed spacing logo footer

--- a/backend/src/public/css/mainlogin.css
+++ b/backend/src/public/css/mainlogin.css
@@ -891,6 +891,7 @@ select { font-family: inherit; }
 
 .img-deg {
   float: left;
+  padding-right: 10px;
 }
 
 .footer-logo-text {
